[package]
name = "libassuan-sys"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
description = "FFI bindings for libassuan"
repository = "https://github.com/rehar/assuan/libassuan-sys/"
categories = ["external-ffi-bindings"]
keywords = ["gpg", "assuan", "libassuan"]
links = "assuan"
build = "build.rs"

[lib]
name = "libassuan_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
libgpg-error-sys = { git = "https://github.com/rehar/libgpg-error.git" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[target.'cfg(windows)'.build-dependencies]
winreg = "0.10.1"